<resources>
    <string name="app_name">ProjectSpring</string>
    <string name="btn_link_signup">btn_signup</string>
    <string name="btn_login">btn_login</string>
    <string name="hint_password">hint_password</string>
    <string name="hint_email">hint_email</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="hello_user">Hello, User</string>
    <string name="sign_out">Sign Out!!</string>
    <string name="sports_name">Sports Name</string>
    <string name="no_of_users">No of users</string>
    <string name="no_of_matches">No of matches</string>
    <string name="todo4">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="write_something_here">Write something here</string>
    <string name="write_here_too">Write here too</string>
    <string name="todo6">TODO</string>
</resources>
