<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminDashboard">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/common_google_signin_btn_text_dark_focused" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="380dp"
        android:layout_height="227dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="178dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:color/background_light" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="183dp"
            android:layout_height="101dp"
            android:layout_margin="2dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:contentDescription="@string/todo2"
            android:padding="8dp"
            app:layout_column="7"
            app:layout_row="0"
            app:srcCompat="@android:color/background_light" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="179dp"
            android:layout_height="106dp"
            android:layout_margin="2dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:contentDescription="@string/todo3"
            android:padding="8dp"
            app:layout_column="0"
            app:layout_row="4"
            app:srcCompat="@android:color/background_light" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="180dp"
            android:layout_height="107dp"
            android:layout_margin="2dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:contentDescription="@string/todo5"
            android:padding="8dp"
            app:layout_column="7"
            app:layout_row="4"
            app:srcCompat="@android:color/background_light" />
    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>